oauth-proxy/oauth-proxy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
spec:
  hostAliases:
  - ip: "10.96.173.176"
    hostnames:
      - "houseproject.internal"
  volumes:
    - name: oauth2-proxy-config
      configMap:
        name: oauth2-proxy-config
  containers:
  - name: oauth-proxy
    image: "quay.io/oauth2-proxy/oauth2-proxy:latest"
    ports:
    - containerPort: 4180
    volumeMounts:
    - name: oauth2-proxy-config
      mountPath: /etc/oauth2-proxy.cfg
      subPath: oauth2-proxy.cfg
    args:
      - --config=/etc/oauth2-proxy.cfg
